Fixed Java Warnings